tests/expectations/compiler/function/self_recursive_cycle_fail.out
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:20
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                    ^^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:15:35
     |
  15 |             return foo(n - 1u8) + foo(n - 2u8);
     |                                   ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:6:16
     |
   6 |         return fib(n - 1u8) + fib(n - 2u8);
     |                ^^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:6:31
     |
   6 |         return fib(n - 1u8) + fib(n - 2u8);
     |                               ^^^^^^^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/foo` --> `test.aleo/foo`
